hphp/hack/test/typecheck/assing_array_get_pair_component_bad.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function test(Pair<int, dict<string, int>> $p): void {
  $p[1]['foo'] = 42;
}
